--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -37,10 +37,8 @@
                             "node_modules/@popperjs/core/dist/umd/popper.min.js"
                         ],
                         "server": "src/main.server.ts",
-                        "prerender": true,
-                        "ssr": {
-                            "entry": "server.ts"
-                        }
+                        "prerender": false,
+                        "ssr": false
                     },
                     "configurations": {
                         "production": {
@@ -61,12 +59,10 @@
                             "optimization": false,
                             "extractLicenses": false,
                             "sourceMap": true,
-                            "fileReplacements": [
-                              {
+                            "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.development.ts"
-                              }
-                            ]
+                            }]
                         }
                     },
                     "defaultConfiguration": "production"
@@ -111,6 +107,6 @@
         }
     },
     "cli": {
-      "analytics": false
+        "analytics": false
     }
 }
