--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "ngx-spinner": "^16.0.2",
