--- a/wallet/docker-compose-rabbitmq-only.yml
+++ b/wallet/docker-compose-rabbitmq-only.yml
@@ -14,6 +14,8 @@ services:
       - "5672:5672"
     labels:
       NAME: "rabbitmq1"
+      ports:
+        -8080:8080
     volumes:
       - "./data:/var/lib/rabbitmq"
       #- "./enabled_plugins:/etc/rabbitmq/enabled_plugins"
